Kubernetes/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: laravel
  namespace: laravel
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
